Tariff amount showing in service dropdown

--- a/src/View/pages/payLater/paylater.scss
+++ b/src/View/pages/payLater/paylater.scss
@@ -318,6 +318,7 @@
                             align-items: center;
                             justify-content: center;
                             gap: 10px;
+                            position: relative;
 
                             input:focus, textarea:focus, select:focus {
                                 outline: #0C4CAC;
@@ -427,6 +428,20 @@
 
                             .required {
                                 border: 1px solid red;
+                            }
+
+                            .tariff-box {
+                                width: max-content;
+                                // border: 1px solid red;
+                                font-size: 12px;
+                                background-color: #5CB85C;
+                                color: white;
+                                font-weight: bold;
+                                padding: 3px 5px;
+                                border-radius: 5px;
+                                position: absolute;
+                                right: 0;
+                                margin: 130px 30px 0px 0px;
                             }
 
                         }
@@ -1147,6 +1162,20 @@
                                     transform: translateY(150px);
                                     transition: 0.5s ease;
                                     position: absolute;
+                                }
+
+                                .tariff-box {
+                                    width: max-content;
+                                    // border: 1px solid red;
+                                    font-size: 12px;
+                                    background-color: #5CB85C;
+                                    color: white;
+                                    font-weight: bold;
+                                    padding: 3px 5px;
+                                    border-radius: 5px;
+                                    position: absolute;
+                                    right: 0;
+                                    margin: 355px 30px 0px 0px;
                                 }
     
                             }
