--- a/src/View/pages/payNow/paynow.scss
+++ b/src/View/pages/payNow/paynow.scss
@@ -323,6 +323,7 @@
                             align-items: center;
                             justify-content: center;
                             gap: 10px;
+                            position: relative;
 
                             input:focus, textarea:focus, select:focus {
                                 outline: #0C4CAC;
@@ -411,6 +412,7 @@
                                 border-radius: 2em;
                                 // position: relative;
                                 position: absolute;
+                                z-index: 10;
                             }
 
                             .calendar-backdrop.active {
@@ -651,7 +653,8 @@
 
                             .cost {
                                 display: flex;
-                                flex-direction: row;
+                                flex-direction: column;
+                                // flex-direction: row;
                                 align-items: center;
                                 gap: 15px;
                                 background-color: #e1f5fe;
@@ -663,6 +666,40 @@
                                 color: #757575;
                                 font-size: 28px;
                                 font-style: italic;
+                                // border: 1px solid red;
+
+                                .bill-summary-wrapper {
+                                    display: flex;
+                                    flex-direction: column;
+                                    font-size: 15px;
+                                    width: 100%;
+                                    // border: 1px solid red;
+                                    gap: 5px;
+
+                                    .summary-header {
+                                        width: 100%;
+                                        justify-content: left;
+                                        font-weight: bold;
+                                        color: #0c4cacc2;
+                                        // border: 1px solid red;
+                                    }
+
+                                    .summary-item {
+                                        display: flex;
+                                        flex-direction: row;
+
+                                        .item-left {
+                                            width: 60%;
+                                        }
+                                        .item-right {
+                                            width: 40%;
+                                        }
+                                    }
+
+                                    .summary-item.total {
+                                        font-size: 28px;
+                                    }
+                                }
 
                                 img {
                                     width: 20px;
