tariff changed to total bill to aid backend

--- a/src/View/pages/patientUserProfile/puprofile.scss
+++ b/src/View/pages/patientUserProfile/puprofile.scss
@@ -387,6 +387,12 @@
                                         outline: #2196f3;
                                         border: 1px solid #2196f3;
                                     }
+                                    .formInput.sm {
+                                        width: 200px;
+                                    }
+                                    // .formTextArea.sm {
+                                    //     width: 600px;
+                                    // }
                                 }
                             }
                         }
