Reports page UI created, logic is not integrated yet

--- a/src/View/pages/admin/admin.scss
+++ b/src/View/pages/admin/admin.scss
@@ -21,7 +21,7 @@
         }
 
         .admin-body {
-            // height: 100vh;
+            min-height: 100vh;
             height: max-content;
             width: 100%;
             // border: 1px solid orange;
