Update Appointment Payment Status

--- a/src/View/pages/staffPortal/sportal.scss
+++ b/src/View/pages/staffPortal/sportal.scss
@@ -266,7 +266,7 @@
                             color: #fff;
                         }
 
-                        .booking-status.cancel {
+                        .booking-status.cancelled {
                             background-color: #ec6494;
                             color: #fff;
                         }
